# learn-cmake

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt
app/app0/: CMakeLists.txt
app/app0/include/app0/: app.hpp
app/app0/src/: app.cpp  main.cpp  precompiled.h
cmake/: flags.cmake
lib/: CMakeLists.txt
lib/lib0/: CMakeLists.txt
lib/lib0/include/lib0/: lib.hpp
lib/lib0/src/: lib.cpp  main.cpp
tests/: CMakeLists.txt
tests/app0/: CMakeLists.txt  main.cpp  test_app0.cpp
tests/lib0/: CMakeLists.txt  test_lib0.cpp
tests/main/: CMakeLists.txt
